# amfi-stream

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
amfi_stream/: __init__.py  columns_case.py  date_parser.py  endpoints.py  factories.py  httpx_client.py  ingestion_engine.py  models.py  normalisers.py  pipeline.py  sources.py  stream_filter.py
scripts/: release.py
src/amfi_stream/: amfi_endpoints.py
tests/: test_httpx_client.py
