[build-system]
requires = [ "setuptools>=68", "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "amfi-stream"
version = "0.3.0"
description = "Streaming ingestion pipeline for AMFI NAV and scheme master data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [ "pyarrow>=8", "fsspec>=2021.7.0",]
[[project.authors]]
name = "Satya M"

[project.optional-dependencies]
dev = [ "pytest",]

[tool.setuptools.package-dir]
"" = "."

[tool.pytest.ini_options]
pythonpath = [ ".",]
testpaths = [ "tests",]

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "amfi_stream*",]
